# project-template-python

./: .appveyor.yml  .pylintrc  .readthedocs.yml  .travis.yml  Makefile  README.rst  project_template.py  pyproject.toml
.github/workflows/: test.yml
docs/: code.rst  conf.py  continuous_integration.rst  dependencies.rst  documentation.rst  index.rst  license.rst  package.rst  scripts.rst  tests.rst
tests/: test_greeting.py
