[tool.poetry]
name = "project_template"
version = "0.1.0"
description = ""
authors = ["John Freeman <jfreeman08@gmail.com>"]
documentation = "https://project-template-python.readthedocs.io/"
repository = "https://github.com/thejohnfreeman/project-template-python/"
readme = "README.rst"
license = "ISC"
packages = [
  { include = "project_template.py" },
]

[tool.poetry.dependencies]
python = "^3.6-dev"
sphinx = {version = "^1.8",extras = ["docs"]}
sphinx_rtd_theme = {version = "^0.4.3",extras = ["docs"]}
toml = {version = "^0.10.0",extras = ["docs"]}

[tool.poetry.dev-dependencies]
mypy = "^0.701.0"
pydocstyle = "^3.0"
pylint = "^2.3"
pytest = "^4.4"
pytest-cov = "^2.6"
sphinx = "^1.8"
sphinx-autobuild = "^0.7.1"
sphinx_rtd_theme = "^0.4.3"
toml = "^0.10.0"
yapf = "^0.27.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
